--- a/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+++ b/ProjectSettings/Packages/com.unity.polybrush/Settings.json
@@ -89,7 +89,7 @@
             {
                 "type": "UnityEditor.Polybrush.PrefabLoadout, Unity.Polybrush.Editor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ScatteringEditor.userLoadout",
-                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"7bf9fd8c4c3307949b320d446bb75e3f\",\"type\":2},\"prefab\":{\"fileID\":6067280026813596915,\"guid\":\"1cd09309530feb143967ad3180111df6\",\"type\":3}}]}}"
+                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"7bf9fd8c4c3307949b320d446bb75e3f\",\"type\":2},\"prefab\":{\"fileID\":7505199586313606861,\"guid\":\"9d4e9980c2fd6c643976375e973bca9f\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"7bf9fd8c4c3307949b320d446bb75e3f\",\"type\":2},\"prefab\":{\"fileID\":7176995990280222201,\"guid\":\"814e695d4345e4049be2d2b1801f06be\",\"type\":3}}]}}"
             },
             {
                 "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
